# proton-mail-export

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh  vcpkg-configuration.json  vcpkg.json
.gitlab/: CODEOWNERS
ci/: artifactlift.yml  build.yml  deploy.yml  installers.yml  lint.yml  setup.yml  test.yml
cli/: CMakeLists.txt
cli/cmake/: Info.plist.in  launcher.sh.in  resources.rc.cmake  run.sh.in
cmake/: clang_format.cmake  clang_tidy.cmake  compile_options.cmake  config.cmake  mingw.cmake  shared_lib_copy.cmake  vcpkg_setup.cmake  version.json.in
go-lib/: .gitignore  .golangci.yml  CMakeLists.txt  README.md  export.go  export_globals.go  export_gpa.go  export_log.go  export_mail.go  go.mod  go.sum
go-lib/cgo_headers/: etexport_mail.h  etexport_mail_impl.h  etglobal.h  etglobal_impl.h  etsession.h
go-lib/cmake/: constants.go.in  patch_etcore.cmake
go-lib/cmd/lib/: export.go  export_backup.go  export_log.go  export_mail.go  export_restore.go  export_session.go
go-lib/cmd/lib/cgo_headers/: etbackup.h  etbackup_impl.h  etexport_backup.h  etexport_backup_impl.h  etexport_mail.h  etexport_restore.h  etexport_restore_impl.h  etglobal.h  etglobal_impl.h  etrestore.h  etrestore_impl.h  etsession.h  etsession_impl.h
go-lib/cmd/proton-mail-export/: main.go
go-lib/internal/: api_client.go  constants.go  errors.go  gpa_server.go  handle.go  handle_test.go  logging.go  mocks_test.go  proton_client.go  session.go  session_login_test.go  version_check.go
go-lib/internal/apiclient/: autoretryclient.go  autoretryclient_test.go  client.go  hv.go  hv_sys_arch_darwin.go  hv_sys_arch_default.go  hv_sys_lang_unix.go  hv_sys_lang_win.go  keyring.go  mocks.go  proton.go
go-lib/internal/app/: app.go  cli_reporter.go  cli_utils.go  credentials.go  operation.go  path_darwin.go  path_windows.go  target_folder.go
go-lib/internal/hv/: hv.go  hv_sys_arch_darwin.go  hv_sys_arch_default.go  hv_sys_lang.go  hv_sys_lang_unix.go  hv_sys_lang_win.go  hv_test.go
go-lib/internal/mail/: export.go  export_stage_build.go  export_stage_download.go  export_stage_download_test.go  export_stage_metadata.go  export_stage_metadata_test.go  export_stage_reporters.go  export_stage_write.go  export_stage_write_test.go  export_test.go  mocks_test.go  restore.go  restore_import.go  restore_labels.go  restore_stage_import.go  restore_stage_labels.go  restore_stage_validation.go  restore_test.go  restore_validation.go  restore_walk.go  utils.go  utils_test.go
go-lib/internal/reporter/: reporter.go
go-lib/internal/sentry/: crash_handler.go  init.go  reporter.go
go-lib/internal/session/: callbacks.go  session.go  session_login_test.go
go-lib/internal/task/: task.go
go-lib/internal/telemetry/: metrics.go  telemetry.go  user.go  utils.go
go-lib/internal/utils/: cutils.go  safe_writer.go  safe_writer_test.go  versioned_json.go  versioned_json_test.go
lib/: CMakeLists.txt
lib/cmake/: etconfig.hpp.in
lib/include/: et.hpp  etbackup.hpp  etcpp.hpp  etexception.hpp  etexport_backup.hpp  etexport_mail.hpp  etexport_restore.hpp  etlog.hpp  etrestore.hpp  etsession.hpp  etutil.hpp
lib/lib/: et.cpp  etbackup.cpp  etcpp.cpp  etexport_backup.cpp  etexport_mail.cpp  etexport_restore.cpp  etlog.cpp  etrestore.cpp  etsession.cpp  etutil.cpp  etutil_darwin.cpp  etutil_linux.cpp  etutil_unix.cpp  etutil_win32.cpp
lib/tests/: CMakeLists.txt  gpa_server.cpp  gpa_server.hpp  main.cpp  test_etutil.cpp  test_mail.cpp  test_mail_export.cpp  test_utils.cpp  test_utils.h
lib/tests/test_data/: ExportedData.cpp  ExportedData.h
res/: icon.icns
scripts/: create_app_darwin.sh  deploy.sh  nexus_push.sh  sign_and_pack_darwin.sh  sign_and_pack_windows.sh
